--- a/style.css
+++ b/style.css
@@ -1,11 +1,14 @@
 body {
     margin: 0;
     font-family: 'Open Sans', sans-serif;
+    background: linear-gradient(180deg, rgba(227, 255, 248, 0) 82.08%, rgba(227, 255, 248, 0.38) 100%);
+    min-height: 100vh;
 }
 
 .page {
     width: 1000px;
-    margin: 65px auto 0;
+    margin: 0 auto 0;
+    padding-top: 65px;
 }
 
 nav {
@@ -29,9 +32,14 @@ a {
     color: #1F1534;
 }
 
+ul li a{
+    opacity: 0.5;
+}
+
 /* pseudoclass */
 ul li a:hover {
     font-weight: bold;
+    opacity: 1;
 }
 
 h1,
@@ -52,22 +60,51 @@ h1 span {
     font-weight: bold;
 }
 
-p {
+main {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+section p {
     font-size: 14px;
     line-height: 28px;
     color: #7D7987;
+    margin: 40px 0;
 }
 
-button{
+button {
+    color: white;
     text-transform: uppercase;
     font-family: 'Open Sans', sans-serif;
+    background: #69B99D;
+    border: none;
+    padding: 14px 32px 15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    border-radius: 4px;
+    cursor: pointer;
 }
 
-footer{
+button:hover {
+    background: #44b38c;
+}
+
+footer {
     font-size: 14px;
     line-height: 28px;
+    text-align: center;
+    margin-top: 80px;
 }
 
-footer a{
+footer a {
     font-weight: bold;
+}
+
+#balls {
+    position: fixed;
+    bottom: 0;
+    right: 0;
 }
